@@ -162,6 +162,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16327: The subprocess module no longer leaks file descriptors
+  used for stdin/stdout/stderr pipes to the child when fork() fails.
+
 - Issue #14396: Handle the odd rare case of waitpid returning 0 when not
   expected in subprocess.Popen.wait().
 
